[package]
name = 'substrate-governance-module'
version = '1.0.0'
authors = ['Joystream contributors']
edition = '2018'

[features]
default = ['std']
std = [
	'sr-primitives/std',
	'srml-support/std',
	'system/std',
	'serde',
	'codec/std',
	'timestamp/std',
	'primitives/std',
	'rstd/std',
	'common/std',
	'membership/std',
	'minting/std',
]

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.srml-support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.common]
default_features = false
package = 'substrate-common-module'
path = '../common'

[dependencies.membership]
default_features = false
package = 'substrate-membership-module'
path = '../membership'

[dev-dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dev-dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.minting]
default_features = false
package = 'substrate-token-mint-module'
path = '../token-minting'