[package]
name = 'pallet-governance'
version = '3.1.1'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
serde = { version = "1.0.124", optional = true, features = ["derive"] }
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "rococo-v1"}
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "rococo-v1"}
frame-system = { package = 'frame-system', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "rococo-v1"}
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "rococo-v1"}
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "rococo-v1"}
pallet-timestamp = { package = 'pallet-timestamp', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "rococo-v1"}
membership = { package = 'pallet-membership', default-features = false, path = '../membership'}
minting = { package = 'pallet-token-mint', default-features = false, path = '../token-minting'}
recurringrewards = { package = 'pallet-recurring-reward', default-features = false, path = '../recurring-reward'}
common = { package = 'pallet-common', default-features = false, path = '../common'}

[dev-dependencies]
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "rococo-v1"}
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "rococo-v1"}
balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "rococo-v1"}

[features]
default = ['std']
std = [
	'serde',
	'codec/std',
	'sp-std/std',
	'frame-support/std',
	'frame-system/std',
	'sp-arithmetic/std',
	'sp-runtime/std',
	'pallet-timestamp/std',
	'membership/std',
	'minting/std',
	'recurringrewards/std',
	'common/std',
]
