[package]
name = 'pallet-membership'
version = '6.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-std = { package = 'sp-std', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '3f915f0a37e73aaa65bf7a1deef69cc9c901641f'}
frame-support = { package = 'frame-support', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '3f915f0a37e73aaa65bf7a1deef69cc9c901641f'}
frame-system = { package = 'frame-system', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '3f915f0a37e73aaa65bf7a1deef69cc9c901641f'}
sp-arithmetic = { package = 'sp-arithmetic', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '3f915f0a37e73aaa65bf7a1deef69cc9c901641f'}
sp-runtime = { package = 'sp-runtime', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '3f915f0a37e73aaa65bf7a1deef69cc9c901641f'}
pallet-timestamp = { package = 'pallet-timestamp', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '3f915f0a37e73aaa65bf7a1deef69cc9c901641f'}
balances = { package = 'pallet-balances', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '3f915f0a37e73aaa65bf7a1deef69cc9c901641f'}
common = { package = 'pallet-common', default-features = false, path = '../common'}
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler'}
# Benchmarking dependencies
frame-benchmarking = { package = 'frame-benchmarking', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '3f915f0a37e73aaa65bf7a1deef69cc9c901641f', optional = true}

[dev-dependencies]
sp-io = { package = 'sp-io', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '3f915f0a37e73aaa65bf7a1deef69cc9c901641f'}
sp-core = { package = 'sp-core', default-features = false, git = 'https://github.com/joystream/substrate.git', rev = '3f915f0a37e73aaa65bf7a1deef69cc9c901641f'}
# working-group = { package = 'pallet-working-group', default-features = false, path = '../working-group'}

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
]
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-std/std',
	'sp-arithmetic/std',
	'sp-runtime/std',
	'pallet-timestamp/std',
	'balances/std',
	'common/std',
	'staking-handler/std',
	'scale-info/std',
]