[package]
name = 'pallet-membership'
version = '6.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
serde = { workspace = true, features = ["derive"], optional = true }
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { workspace = true, features = ["derive"] }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
pallet-timestamp = { workspace = true }
balances = { workspace = true }
common = { package = 'pallet-common', default-features = false, path = '../common'}
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler'}
# Benchmarking dependencies
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
# working-group = { package = 'pallet-working-group', default-features = false, path = '../working-group'}

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking/runtime-benchmarks',
	'common/runtime-benchmarks',
]
std = [
	'serde',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-std/std',
	'sp-arithmetic/std',
	'sp-runtime/std',
	'pallet-timestamp/std',
	'balances/std',
	'common/std',
	'staking-handler/std',
	'scale-info/std',
	'frame-benchmarking?/std',
]
try-runtime = [ "frame-support/try-runtime"]
