[package]
name = "pallet-project-token"
version = '1.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
sp-io = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-arithmetic = { workspace = true }
common = { package = 'pallet-common', default-features = false, path = '../common'}
storage = { package = 'pallet-storage', default-features = false, path = '../storage'}
balances = { workspace = true }
membership = { package = 'pallet-membership', default-features = false, path = '../membership'}
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
serde = { workspace = true, features = ["derive"], optional = true }
scale-info = { workspace = true, features = ["derive"] }

# Benchmarking dependencies
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
randomness-collective-flip = { workspace = true }
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler'}
pallet-timestamp = { workspace = true }
sp-storage = { workspace = true }

[features]
default = ['std']
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"common/runtime-benchmarks",
]
std = [
	'sp-std/std',
	'sp-io/std',
	'sp-runtime/std',
	'frame-support/std',
	'frame-system/std',
	'sp-arithmetic/std',
	'common/std',
	'storage/std',
	'balances/std',
	'membership/std',
	'codec/std',
	'serde',
	'scale-info/std',
	'frame-benchmarking?/std',
]
try-runtime = ["frame-support/try-runtime"]
