[package]
name = 'pallet-referendum'
version = '6.0.0'
authors = ['Joystream contributors']
edition = '2018'

[dependencies]
codec = { package = 'parity-scale-codec', version = '3.1.2', default-features = false, features = ['derive'] }
scale-info = { workspace = true, features = ["derive"] }
serde = { workspace = true, optional = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-arithmetic = { workspace = true }
sp-std = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
common = { package = 'pallet-common', default-features = false, path = '../common'}
balances = { workspace = true }
staking-handler = { package = 'pallet-staking-handler', default-features = false, path = '../staking-handler'}

# Benchmark dependencies
frame-benchmarking = { workspace = true, optional = true }
membership = { package = 'pallet-membership', default-features = false, path = '../membership', optional = true }

[dev-dependencies]
sp-io = { workspace = true }
rand = "0.7.3"
pallet-timestamp = { workspace = true }
membership = { package = 'pallet-membership', default-features = false, path = '../membership' }

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking/runtime-benchmarks',
    'membership/runtime-benchmarks',
    'common/runtime-benchmarks',
]
std = [
    'codec/std',
    'sp-core/std',
    'sp-std/std',
    'serde',
    'sp-runtime/std',
    'sp-arithmetic/std',
    'frame-support/std',
    'frame-system/std',
    'common/std',
    'staking-handler/std',
    'balances/std',
    'membership/std',
    'scale-info/std',
    'frame-benchmarking?/std',
]
try-runtime = [ "frame-support/try-runtime"]
