[package]
name = 'substrate-roles-module'
version = '1.0.0'
authors = ['Joystream contributors']
edition = '2018'

[features]
default = ['std']
std = [
	'sr-primitives/std',
	'srml-support/std',
	'system/std',
	'rstd/std',
	'codec/std',
	'serde',
	'primitives/std',
	'common/std',
	'membership/std',
]


[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.srml-support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'c37bb08535c49a12320af7facfd555ce05cce2e8'

[dependencies.membership]
default_features = false
package = 'substrate-membership-module'
path = '../membership'

[dependencies.common]
default_features = false
package = 'substrate-common-module'
path = '../common'
